# python-sri-sdk

./: .gitignore  .pre-commit-config.yaml  BUILD.md  Dockerfile  LICENSE  Pipfile  README.md  build.sh  docker-compose.yml  main.py  pyproject.toml  pytest.ini  setup.py  test_sri.py
bill/: XAdESSigner.py  enum.py  sri.py  tests.py
bill/templates/: factura_V1.1.0.xml  factura_V2.1.0.xml  good.xml  me.xml
python_sri_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/sri/: XAdESSigner.py  __init__.py
src/sri/templates/: factura_V1.1.0.xml  ride.html
src/sri/templates/pdf/: layout_print_a4.html
sri/: __init__.py  enum.py
sri/sri/: enum.py
sri/sri/templates/: ride.html
sri/templates/: factura_V1.1.0.xml  ride.html
tests/: tests.py
