[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sri"
version = "1.0.0"
authors = [
  { name="William Tapia", email="info@rushdelivery.app" },
]
description = "SRI provides a simple interface to the SRI API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bennyrock20/python-sri-sdk"
"Bug Tracker" = "https://github.com/bennyrock20/python-sri-sdk/issues"