[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sri"
version = "1.0.6"
authors = [
  { name="William Tapia", email="info@rushdelivery.app" },
]
description = "SRI provides a simple interface to the SRI API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "signxml==3.0.0",
  "zeep>=4.2.1",
#  "pydantic>=1.10.4",
#  "jinja2>=3.1.2",
#  "typing_extensions>=3.10.0.0; python_version < '3.10'",
]

[project.urls]
"Homepage" = "https://github.com/bennyrock20/python-sri-sdk"
"Bug Tracker" = "https://github.com/bennyrock20/python-sri-sdk/issues"